--- a/app/src/main/res/values/codigos_ads.xml
+++ b/app/src/main/res/values/codigos_ads.xml
@@ -8,5 +8,6 @@
     <string name="ad_DenunciaTexto">ca-app-pub-2600751459304159/5183887928</string>
     <string name="ad_ListaPrecios">ca-app-pub-2600751459304159/8931561247</string>
     <string name="ad_Scanner">ca-app-pub-2600751459304159/5731349117</string>
+    <string name="ad_Popup">ca-app-pub-2600751459304159/9785156459</string>
 
 </resources>
