--- a/app/src/main/res/layout/activity_mandar_denuncia_foto.xml
+++ b/app/src/main/res/layout/activity_mandar_denuncia_foto.xml
@@ -49,45 +49,29 @@
 
     <Button
         android:id="@+id/btnCancelar"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="1"
         android:background="@drawable/btn_rosa"
         android:onClick="btnCancelar"
         android:text="@string/cancelar"
-        android:textSize="8sp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@id/Footer"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/btnMandarMail"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_weight="1"
-        android:background="@drawable/btn_azul"
-        android:onClick="MandarMail"
-        android:text="Mail a Defensa Consumidor"
-        android:textSize="8sp"
-        app:layout_constraintBottom_toTopOf="@id/Footer"
-        app:layout_constraintEnd_toStartOf="@+id/btnMandarTweet"
-        app:layout_constraintStart_toEndOf="@+id/btnCancelar" />
-
-    <Button
         android:id="@+id/btnMandarTweet"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="1"
         android:background="@drawable/btn_verde"
-        android:onClick="MandarTweet"
+        android:onClick="onShareClick"
         android:text="@string/enviar_por_tweeter"
-        android:textSize="8sp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@id/Footer"
         app:layout_constraintEnd_toEndOf="parent" />
 
